# rust-desktop-suite

./: .gitignore  Cargo.toml  README.md  build.rs  ui.slint
src/: auth.rs  cache.rs  config.rs  geocode.rs  main.rs  news.rs  weather.rs
