[package]
name = "slint_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.7.1"
tokio = { version = "1.39", features = ["rt-multi-thread", "time", "fs"] }
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
rand = "0.8"
open = "5"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
urlencoding = "2.1.3"
scraper = "0.24.0"
anyhow = "1.0.99"
image = "0.25.6"
img = "0.1.0"
lazy_static = "1.4"
futures = "0.3"


[build-dependencies]
slint-build = "1.7.1"
